# openaec-bcf-platform

./: .env.example  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile  STATUS.md  TODO.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
crates/bcf-core/: Cargo.toml
crates/bcf-core/src/: bcfzip.rs  error.rs  lib.rs  markup.rs  types.rs  visinfo.rs  xml_types.rs
crates/bcf-server/: Cargo.toml
crates/bcf-server/src/: config.rs  error.rs  main.rs  state.rs
crates/bcf-server/src/auth/: api_key.rs  authentik_token.rs  forward_auth.rs  jwt.rs  mod.rs  oidc.rs
crates/bcf-server/src/cors/: mod.rs
crates/bcf-server/src/db/: api_keys.rs  comments.rs  events.rs  extensions.rs  members.rs  mod.rs  projects.rs  topics.rs  users.rs  viewpoints.rs
crates/bcf-server/src/models/: api_key.rs  comment.rs  event.rs  extension.rs  member.rs  mod.rs  project.rs  topic.rs  user.rs  viewpoint.rs
crates/bcf-server/src/routes/: api_keys.rs  auth_routes.rs  bcfio.rs  cloud.rs  comments.rs  events.rs  extensions.rs  health.rs  members.rs  mod.rs  projects.rs  topics.rs  users.rs  viewpoints.rs
crates/bcf-server/src/storage/: mod.rs
crates/bcf-server/src/webdav/: mod.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  themes.css
frontend/src/api/: client.ts  cloudApi.ts
frontend/src/components/: ApiKeyManager.tsx  CommentThread.tsx  CreateTopic.tsx  Layout.tsx  MemberManager.tsx  StatusBadge.tsx  TopicList.tsx  ViewpointCard.tsx
migrations/: 001_initial_schema.sql  002_project_enhancements.sql  003_users_email_unique.sql
tests/: api_test.rs
(+24 files in other folders)
