[package]
name = "bcf-core"
description = "BCF 2.1 XML/ZIP library — no web dependencies"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
quick-xml = { version = "0.37", features = ["serialize"] }
zip = "2"
base64 = "0.22"
